--- a/index.html
+++ b/index.html
@@ -47,5 +47,7 @@
         <li><a href="./public/contact.html">Contact Me</a></li>
         <li><a href="./public/hobby.html">My Hobbies</a></li>
     </ul>
+    <hr>
+    <footer>© Ahmet Ulker. All rights reserved.</footer>
 </body>
 </html>
